# tomllint

./: DEVELOPMENT.md  README.md  check  pyproject.toml  requirements.txt  setup-env
src/tomllint/: main.py
