[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tomllint"
version = "0.3.0"
description = "A simple TOML linter."
requires-python = ">=3.11"
keywords = ["toml", "lint"]
readme = "README.md"
authors = [{ name = "Will Bradley" }]
license = { name = "CC0", file = "LICENSE" }

[project.urls]
homepage = "https://github.com/wbbradley/tomllint"
repository = "https://github.com/wbbradley/tomllint"

[tool.ruff]
line-length = 100

[project.scripts]
tomllint = "tomllint.main:main"
